--- a/app/src/main/res/layout/fragment_post_full.xml
+++ b/app/src/main/res/layout/fragment_post_full.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="title"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"/>
 
     <TextView
@@ -19,8 +19,6 @@
         android:layout_height="wrap_content"
         android:text="body"
         android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:maxLines="5"
-        android:ellipsize="end"/>
+        android:textSize="24sp"/>
 
 </LinearLayout>
