--- a/app/src/main/res/layout/activity_post_feed.xml
+++ b/app/src/main/res/layout/activity_post_feed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.lasic.ublog.MainActivity">
+    tools:context="com.example.lasic.ublog.PostFeedActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
