--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
                 android:hint="@string/prompt_username"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:imeOptions="actionNext"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
@@ -71,6 +72,7 @@
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:imeOptions="actionNext"
                 android:singleLine="true" />
 
         </android.support.design.widget.TextInputLayout>
