--- a/app/src/main/res/layout/activity_post_feed.xml
+++ b/app/src/main/res/layout/activity_post_feed.xml
@@ -12,9 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:elevation="4dp">
+        android:elevation="4dp"
+        android:theme="@style/Toolbar">
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/iv_profile"
             android:layout_marginRight="16dp"
             android:layout_gravity="right"
