--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="Toolbar" parent="AppTheme">
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
 </resources>
