--- a/app/src/main/res/layout/activity_post_feed.xml
+++ b/app/src/main/res/layout/activity_post_feed.xml
@@ -13,7 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/Toolbar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <ImageView
             android:visibility="gone"
