--- a/app/src/main/res/layout/activity_post_feed.xml
+++ b/app/src/main/res/layout/activity_post_feed.xml
@@ -30,6 +30,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/container">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_margin="16dp"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:src="@drawable/fab_plus"
+            android:layout_gravity="bottom|right"
+            android:clickable="true"/>
     </FrameLayout>
 
 </LinearLayout>
